--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                             <ul class="list-unstyled">
                                 <li><i class="fa fa-map-marker"></i><span class="sr-only">Location:</span>Amravati, Maharashtra, India</li>
                                 <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a href="mailto:adityakalambe20@gmail.com">adityakalambe20@gmail.com</a></li>
-                                <li><i class="fa fa-link"></i><span class="sr-only">Website:</span><a href="#">http://www.website.com</a></li>
+<!--                                <li><i class="fa fa-link"></i><span class="sr-only">Website:</span><a href="#">http://www.website.com</a></li>-->
                             </ul>
                         </div><!--//content-->  
                     </div><!--//section-inner-->                 
