--- a/index.html
+++ b/index.html
@@ -176,17 +176,19 @@
                         </div><!--//content-->  
                     </div><!--//section-inner-->                 
                 </section><!--//section-->
-                <section class="github section">
-                    <div class="section-inner">
-                        <h2 class="heading">My GitHub</h2>
-                        <p>You can embed your GitHub activities using Casey Scarborough's <a href="http://caseyscarborough.com/projects/github-activity/" target="_blank">GitHub Activity Stream</a> widget. You can also take a screenshot of your GitHub chart and put it here for fun.</p>
-                        <p><a href="#"><img class="img-responsive" src="assets/images/github-chart.png" alt="GitHub Contributions Chart" /></a></p>               
-                        <!--//Usage: http://caseyscarborough.com/projects/github-activity/ -->                       
-                        <div id="ghfeed" class="ghfeed">
-                        </div><!--//ghfeed-->
-                        
-                    </div><!--//secton-inner-->
-                </section><!--//section-->
+<!--                -->
+<!--                <section class="github section">-->
+<!--                    <div class="section-inner">-->
+<!--                        <h2 class="heading">My GitHub</h2>-->
+<!--                        <p>You can embed your GitHub activities using Casey Scarborough's <a href="http://caseyscarborough.com/projects/github-activity/" target="_blank">GitHub Activity Stream</a> widget. You can also take a screenshot of your GitHub chart and put it here for fun.</p>-->
+<!--                        <p><a href="#"><img class="img-responsive" src="assets/images/github-chart.png" alt="GitHub Contributions Chart" /></a></p>               -->
+<!--                        &lt;!&ndash;//Usage: http://caseyscarborough.com/projects/github-activity/ &ndash;&gt;                       -->
+<!--                        <div id="ghfeed" class="ghfeed">-->
+<!--                        </div>&lt;!&ndash;//ghfeed&ndash;&gt;-->
+<!--                        -->
+<!--                    </div>&lt;!&ndash;//secton-inner&ndash;&gt;-->
+<!--                </section>&lt;!&ndash;//section&ndash;&gt;-->
+<!--                -->
             </div><!--//primary-->
             <div class="secondary col-md-4 col-sm-12 col-xs-12">
                  <aside class="info aside section">
