--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->  
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->  
 <head>
-    <title>Responsive HTML5 Website Template for Developers | 3rd Wave Media</title>
+    <title>Aditya Kalambe Resume</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -35,10 +35,10 @@
     <!-- ******HEADER****** --> 
     <header class="header">
         <div class="container">                       
-            <img class="profile-image img-responsive pull-left" src="assets/images/profile.png" alt="James Lee" />
+            <img class="profile-image img-responsive pull-left" src="assets/images/profile.png" alt="Aditya Kalambe" width="180px" height="180px"/>
             <div class="profile-content pull-left">
                 <h1 class="name">Aditya V. Kalambe</h1>
-                <h2 class="desc">Java Full-Stack Developer</h2>
+                <h2 class="desc">Full-Stack Java Developer</h2>
                 <ul class="social list-inline">
                     <li><a href="https://join.skype.com/invite/xSsk4fU0CFk2"><i class="fa fa-skype"></i></a></li>
 <!--                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>-->
@@ -134,9 +134,22 @@
                         <h2 class="heading">Other Projects</h2>
                         <div class="content">
                             <div class="item">
-                                <h3 class="title"><a href="#">Project Title Cras Lacus</a></h3>
-                                <p class="summary">Provide a brief description of your project. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatu.</p>
-                                <p><a class="more-link" href="https://wrapbootstrap.com/theme/delta-promote-mobile-app-effectively-WB09R23P8?ref=3wm" target="_blank"><i class="fa fa-external-link"></i> Find out more</a></p>
+                                <h3 class="title"><a href="#">Dairy Products and Livestock Management System</a></h3>
+                                <p class="summary">
+                                <ul>
+                                    <li>
+                                        The main aim of this project is to provide market linkage to each dairy farmers so it allows them to sell their products
+                                        at the best price. Also, this project allows sellers (dairy farmers) to sell their products at wholesale.
+                                    </li>
+                                    <li>
+                                        <b>Technology Used :</b> HTML, CSS, JavaScript, MySQL, PHP, Laravel Framework.
+                                    </li>
+                                    <li>
+                                        <b>Role :</b> Front-end Development (HTML, CSS), Database Design and Management.
+                                    </li>
+                                </ul>
+                                </p>
+<!--                                <p><a class="more-link" href="https://wrapbootstrap.com/theme/delta-promote-mobile-app-effectively-WB09R23P8?ref=3wm" target="_blank"><i class="fa fa-external-link"></i> Find out more</a></p>-->
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title"><a href="#">Project Title Cras eget lacus</a> <span class="label label-theme">Open Source</span></h3>
@@ -238,7 +251,8 @@
                         <h2 class="heading">Skills</h2>
                         <div class="content">
                             <p class="intro">
-                                Intro about your skills goes here. Keep the list lean and only show your primary skillset. You can always provide a link to your Linkedin or Coderwall profile so people can get more info there.</p>
+                                Intro about your skills goes here. Keep the list lean and only show your primary skillset. You can always provide a link to your Linkedin or Coderwall profile so people can get more info there.
+                            </p>
                             
                             <div class="skillset">
                                
